--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@turf/turf": "^7.2.0",
+    "d3-geo": "^3.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "us-atlas": "^3.0.1",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
