--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
-    "@turf/turf": "^7.2.0",
     "d3-geo": "^3.1.1",
     "rxjs": "~7.8.0",
+    "topojson-client": "^3.1.0",
     "tslib": "^2.3.0",
     "us-atlas": "^3.0.1",
     "zone.js": "~0.14.3"
@@ -29,7 +29,9 @@
     "@angular-devkit/build-angular": "^18.0.2",
     "@angular/cli": "^18.0.2",
     "@angular/compiler-cli": "^18.0.0",
+    "@types/d3-geo": "^3.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/topojson-client": "^3.1.5",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
